- gradle/docker tinkering